# Inverted-Pendulum

./: CMakeLists.txt  main.c  main_v2.c  mainv1.c
include/: 1_hardware_configuration.h  2_blink.h  2_buzzer.h  2_encoder.h  2_hall_sensor.h  2_lcd.h  2_motor.h  3_calibration.h  3_menu.h  3_monitor.h  3_talker.h  3_usb.h  4_lqr.h  4_swing_up.h  5_controller.h
source/: 1_hardware_configuration.c  2_blink.c  2_buzzer.c  2_encoder.c  2_hall_sensor.c  2_lcd.c  2_motor.c  3_calibration.c  3_menu.c  3_monitor.c  3_talker.c  3_usb.c  4_lqr.c  4_swing_up.c  5_controller.c
